// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CateringReportOverallComponent should match snapshot 1`] = `
<div
  id="root1"
>
  <div
    class="bg-white shadow rounded m-2 px-8 w-48 h-24 flex flex-col items-center justify-center"
  >
    <div
      class="text-3xl"
    >
       0 
    </div>
    <div>
      Orders
    </div>
  </div>
  <div
    class="bg-white shadow rounded m-2 px-8 w-48 h-24 flex flex-col items-center justify-center"
  >
    <div
      class="text-3xl"
    >
       0 
    </div>
    <div>
      Unique Items
    </div>
  </div>
  <div
    class="bg-white shadow rounded m-2 px-8 w-48 h-24 flex flex-col items-center justify-center"
  >
    <div
      class="text-3xl"
    >
      0
    </div>
    <div>
      Ordered Items
    </div>
  </div>
  <div
    class="bg-white shadow rounded m-2 px-8 w-48 h-24 flex flex-col items-center justify-center"
  >
    <div
      class="text-3xl"
    >
       $0.00 
    </div>
    <div>
      Total
    </div>
  </div>
  <div
    class="bg-white shadow rounded m-2 px-8 w-48 h-24 flex flex-col items-center justify-center"
  >
    <div
      class="text-3xl"
    >
       $0.00 
    </div>
    <div>
      Order Average
    </div>
  </div>
</div>
`;

exports[`CateringReportOverallComponent should match snapshot 2`] = `
<div
  id="root1"
>
  <div
    class="bg-white shadow rounded m-2 px-8 w-48 h-24 flex flex-col items-center justify-center"
  >
    <div
      class="text-3xl"
    >
       32 
    </div>
    <div>
      Orders
    </div>
  </div>
  <div
    class="bg-white shadow rounded m-2 px-8 w-48 h-24 flex flex-col items-center justify-center"
  >
    <div
      class="text-3xl"
    >
       60 
    </div>
    <div>
      Unique Items
    </div>
  </div>
  <div
    class="bg-white shadow rounded m-2 px-8 w-48 h-24 flex flex-col items-center justify-center"
  >
    <div
      class="text-3xl"
    >
      120
    </div>
    <div>
      Ordered Items
    </div>
  </div>
  <div
    class="bg-white shadow rounded m-2 px-8 w-48 h-24 flex flex-col items-center justify-center"
  >
    <div
      class="text-3xl"
    >
       $1,200.00 
    </div>
    <div>
      Total
    </div>
  </div>
  <div
    class="bg-white shadow rounded m-2 px-8 w-48 h-24 flex flex-col items-center justify-center"
  >
    <div
      class="text-3xl"
    >
       $30.00 
    </div>
    <div>
      Order Average
    </div>
  </div>
</div>
`;
